# Basic-rag

./: .env.example  .env_arnab_lmstudio  .env_sankar  .env_sankar1  .gitignore  Basic-rag.txt  README.md  README_old.md  docker-compose-backup-02-nototworking.yml  docker-compose.yml  init-rag-structure.ps1  init-rag-structure.sh  the_colors_of_old_calcutta_story.txt
common/: README.md
common/utils/: README.md  embedding.py
ingestion-service/: Dockerfile  pyproject.toml
ingestion-service/app/: main.backup01.py  main.backup02  main.py
ingestion-service/app/common/utils/: embedding.py
ingestion-service/common/utils/: README.md  chunking.py
init/: init.sql
llm-service/: Dockerfile  pyproject.toml
llm-service/app/: main.py  main_backup_v02.py  main_backup_v03.py  main_backup_v04.py
rag-orchestrator/: Dockerfile  README.md  pyproject.toml
rag-orchestrator/app/: api.py  api_backup_v02.py  api_backup_v04.py  api_backup_v05.py  api_backup_v06.py  config.py  config_backup_v01.py  main.py  models.py  models_backup_v01.py  service.py
vector-store-service/: Dockerfile  README.md  pyproject.toml
vector-store-service/app/: main.backup01
vector-store-service/app/utils/: pg.py
