[project]
name = "llm-service"
version = "0.1.0"
description = "Connects to OpenAI or local LLMs like Ollama"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "python-dotenv",
  "openai",         # for OpenAI LLMs
  "ollama"          # optional, for local LLMs
]



